# data-science-ebac-mod43

./: README.md  lol_match_winner_prediction.ipynb  main.py  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
docs/: 01-contexto.md  02-dados.md  03-modelagem.md  04-resultados.md  05-simulador.md  index.md
models/: decision_tree.pkl  gradient_boosting.pkl  gradient_boosting_tuned.pkl  logistic_regression.pkl  logistic_regression_tuned.pkl  naive_bayes.pkl  scaler.pkl
src/lol_match_winner_predictor/: main.py  model_utils.py  streamlit_app.py
src/lol_match_winner_predictor/app/: model_utils.py  streamlit_app.py
