[project]
name = "lol-match-winner-predictor"
version = "0.1.0"
description = "Projeto de Machine Learning para prever o vencedor de partidas de League of Legends."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "zensical>=0.0.46",
]
